kuber/1.5/src/01-back.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-dpl
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: network-multitool
          image: wbitt/network-multitool
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  ports:
    - name: multitool
      port: 80
      protocol: TCP
  selector:
    app: backend
