kuber/1.5/src/01-front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-dpl
  labels:
    app: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: nginx
          image: nginx:1.14
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
spec:
  ports:
    - name: nginx
      port: 80
      protocol: TCP
  selector:
    app: frontend
