kuber/1.5/src/02-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  name: nginx
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  name: multitool
